Refactored Folia Support
This resupplies Folia support that was reverted in:
https://github.com/GemstoneGG/DeluxeMenus/commit/39ecf3a514e774a1a8d1727c4c0b2ca14dc9de14

Notable changes (this should be tested by maintainers for confidence):
- https://github.com/HelpChat/DeluxeMenus/issues/289 (Resolves)
- https://github.com/HelpChat/DeluxeMenus/issues/285 (Resolves)
- Implements DeluxeMenus's Paper compatibility layer slightly more extensively than: https://github.com/HelpChat/DeluxeMenus/pull/228 (minus MiniMessage compatibility layer due to potential convolusion)
- Bumps a few dependencies (including PlaceholderAPI)
- Hardens dupe mitigation
- Introduces open + close command layering
- Full Java 21 conversion

If Folia issues are encountered and this is partially or completely merged, feel free to @ (ping) me, and I'm happy to investigate. I wasn't aware that reversion was on the table roughly a month ago!