@@ -2,18 +2,19 @@ package com.extendedclip.deluxemenus.command;
 
 import com.extendedclip.deluxemenus.DeluxeMenus;
 import com.extendedclip.deluxemenus.command.subcommand.*;
-import com.extendedclip.deluxemenus.utils.DebugLevel;
 import com.extendedclip.deluxemenus.utils.Messages;
+import io.papermc.paper.command.brigadier.BasicCommand;
+import io.papermc.paper.command.brigadier.CommandSourceStack;
+import io.papermc.paper.plugin.lifecycle.event.types.LifecycleEvents;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextReplacementConfig;
 import net.kyori.adventure.text.format.NamedTextColor;
-import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.PluginCommand;
-import org.bukkit.command.TabExecutor;
 import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NonNull;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -22,7 +23,7 @@ import java.util.stream.Collectors;
 
 import static net.kyori.adventure.text.Component.text;
 
-public class DeluxeMenusCommand implements TabExecutor {
+public class DeluxeMenusCommand implements BasicCommand {
 
     private static final TextReplacementConfig.Builder VERSION_REPLACER_BUILDER = TextReplacementConfig.builder().matchLiteral("<version>");
     private static final TextReplacementConfig.Builder AUTHORS_REPLACER_BUILDER = TextReplacementConfig.builder().matchLiteral("<authors>");
@@ -35,48 +36,47 @@ public class DeluxeMenusCommand implements TabExecutor {
     }
 
     public boolean register() {
-        final PluginCommand command = this.plugin.getCommand("deluxemenus");
-        if (command == null) {
-            return false;
-        }
-
-        command.setExecutor(this);
         registerSubCommands();
+        plugin.getLifecycleManager().registerEventHandler(LifecycleEvents.COMMANDS, event ->
+                event.registrar().register(
+                        "deluxemenus",
+                        "DeluxeMenus main command",
+                        List.of("dm"),
+                        this
+                )
+        );
         return true;
     }
 
     @Override
-    public boolean onCommand(
-            final @NotNull CommandSender sender,
-            final @NotNull Command command,
-            final @NotNull String label,
-            final @NotNull String[] args
+    public void execute(
+            final @NotNull CommandSourceStack stack,
+            final @NotNull String @NonNull [] args
     ) {
+        final CommandSender sender = stack.getSender();
         final List<String> arguments = Arrays.asList(args);
 
-        if (arguments.isEmpty()) {
+        if (arguments.isEmpty() || (arguments.size() == 1 && arguments.getFirst().isEmpty())) {
             plugin.sms(sender, Messages.PLUGIN_VERSION.message().replaceText(VERSION_REPLACER_BUILDER.replacement(plugin.getDescription().getVersion()).build()).replaceText(AUTHORS_REPLACER_BUILDER.replacement(plugin.getDescription().getAuthors().stream().map(author -> text(author, NamedTextColor.WHITE)).collect(Component.toComponent(text(", ", NamedTextColor.GRAY)))).build()));
-            return true;
+            return;
         }
 
-        final SubCommand subCommand = subCommands.get(arguments.get(0).toLowerCase());
+        final SubCommand subCommand = subCommands.get(arguments.getFirst().toLowerCase());
 
         if (subCommand != null) {
             subCommand.execute(sender, arguments.subList(1, arguments.size()));
-            return true;
+            return;
         }
 
         plugin.sms(sender, Messages.WRONG_USAGE);
-        return true;
     }
 
     @Override
-    public List<String> onTabComplete(
-            final @NotNull CommandSender sender,
-            final @NotNull Command command,
-            final @NotNull String label,
-            final @NotNull String[] args
+    public @NotNull Collection<String> suggest(
+            final @NotNull CommandSourceStack stack,
+            final @NotNull String @NonNull [] args
     ) {
+        final CommandSender sender = stack.getSender();
         final List<String> arguments = Arrays.asList(args);
 
         return subCommands.values()
