@@ -187,7 +187,7 @@ public class HasItemRequirement extends Requirement {
                     .map(holder::setPlaceholdersAndArguments)
                     .map(StringUtils::parseRGBColor)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Color color : colors) {
                 if (!modelData.getColors().contains(color)) {
@@ -201,7 +201,7 @@ public class HasItemRequirement extends Requirement {
                     .stream()
                     .map(holder::setPlaceholdersAndArguments)
                     .map(Boolean::parseBoolean)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Boolean flag : flags) {
                 if (!modelData.getFlags().contains(flag)) {
@@ -215,7 +215,7 @@ public class HasItemRequirement extends Requirement {
                     .stream()
                     .map(holder::setPlaceholdersAndArguments)
                     .map(Float::parseFloat)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Float floatValue : floats) {
                 if (!modelData.getFloats().contains(floatValue)) {
@@ -228,7 +228,7 @@ public class HasItemRequirement extends Requirement {
             final List<String> strings = wrapper.strings()
                     .stream()
                     .map(holder::setPlaceholdersAndArguments)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (String string : strings) {
                 if (!modelData.getStrings().contains(string)) {
